Thu Oct 17 20:33:08 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: remove handle-system-error, after moving the code into
	error-catching-loop.
	Don't set 'throw-handler-default property on error keys.
	Just interpret (almost) any throw with 4 args as an error throw.
	Delete some try-load stuff that was already commented out.

	Second thoughts, keep handle-system-error but call it from
	error-catching-loop.

Tue Oct 15 17:07:20 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm: Doc fixes.
	(make-module): Rework for readability.
	(make-root-module, make-scm-module): USES argument to make-module
 	should be '(), not #f.

	* boot-9.scm (try-load): %sys-load-path has been renamed to
	primitive-load-path; adjust call here.

Tue Oct 15 14:25:01 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm (signal-handler): Bugfix: Moved the recording of
 	the stack to the correct place: when it is decided to generate an
	error-signal.

Mon Oct 14 22:20:30 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm (error-catching-loop, signal-handler,
 	handle-system-error): Backtracing now works for signals aswell;
 	Backtracing mechanism can now identify the stack root created by
 	start-stack so that the user isn't exposed to system stack frames.

Mon Oct 14 06:05:42 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* Makefile.in: Added threads.scm.
	
Mon Oct 14 04:21:51 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* debug.scm (make-enable, make-disable): Simplified.

	* boot-9.scm: Renamed %%throw-handler-default -->
 	throw-handler-default.
	((handle-system-error key . arg-list)): Changed the way errors are
	reported.
	((scm-style-repl)): Wrap up the call to eval in a start-stack
 	acro.
	((error-catching-loop thunk)): Introduce a lazy-catch into
 	error-catching-loop so that the stack can be captured.

Thu Oct 10 22:27:32 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* mapping.scm (hash-table-mapping): Explicitly request that